Update scritp for database; card and set form

--- a/app/templates/theme4/css/style.css
+++ b/app/templates/theme4/css/style.css
@@ -1,5 +1,11 @@
 /* Navbar ====================================== */
 @import url(materialize.css);
+
+.left-pack {
+    max-height: 76vh;
+    overflow: auto;
+}
+
 .navbar {
   font-family: "Roboto", sans-serif;
   -webkit-border-radius: 0;
