--- a/app/templates/theme4/layout.html
+++ b/app/templates/theme4/layout.html
@@ -9,48 +9,48 @@
     <link rel="apple-touch-icon" sizes="180x180" href="app/images/icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    
+
     {LIBRARIES}
     {HEAD}
-    
+
     <script src="app/lib/include/admin-all.min.js?appver=730" type="text/javascript"></script>
     <link href="app/lib/include/admin.min.css?appver=730" rel="stylesheet" type="text/css" media="screen">
-    
+
     <link href="app/templates/{template}/plugins/node-waves/waves.css" rel="stylesheet" />
     <link href="app/templates/{template}/plugins/animate-css/animate.css" rel="stylesheet" />
     <link href="app/templates/{template}/css/style.css" rel="stylesheet">
     <link href="app/templates/{template}/css/themes/all-themes.css" rel="stylesheet" />
     <link href="app/templates/{template}/css/sweetalert.css" rel="stylesheet">
-    
+
     <link href="app/templates/{template}/plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css" rel="stylesheet"/>
     <script src="app/templates/{template}/plugins/moment/moment-with-locales.min.js" type="text/javascript"></script>
     <script src="app/templates/{template}/plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js" type="text/javascript"></script>
-    
-    
+
+
     <script>
     $(function() {
         update_notifications_menu();
         update_messages_menu();
-        
+
         // setInterval( update_messages_menu, 5000);
         // setInterval( update_notifications_menu, 5000);
-        
+
         __adianti_set_language('{lang}');
         __adianti_set_debug({debug});
     });
-    
+
     function update_messages_menu() {
         $.get('engine.php?class=MessageList&theme=theme4', function(data) {
             $('#envelope_messages').html(data);
         });
     }
-    
+
     function update_notifications_menu() {
         $.get('engine.php?class=NotificationList&theme=theme4', function(data) {
             $('#envelope_notifications').html(data);
         });
     }
-    
+
     $.get('engine.php?class=SearchInputBox', function(data) {
         $('#envelope_search').html(data);
     });
@@ -75,7 +75,7 @@
         </div>
     </div>
     <!-- #END# Page Loader -->
-    
+
     <!-- Overlay For Sidebars -->
     <div class="overlay"></div>
     <!-- #END# Overlay For Sidebars -->
@@ -97,7 +97,7 @@
 
     <nav class="nav navbar navbar-expand-lg navbar-dark " style="z-index:999">
         <a href="javascript:void(0);" class="bars"></a>
-        <a class="navbar-brand" href="index.php">MTG Tracker</a>
+        <a class="navbar-brand" href="index.php?class=WelcomeView">MTG Tracker</a>
         <i style="cursor:pointer" class="fas fa-columns white" onclick="$('body').toggleClass('ls-closed');"></i>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbartoggle" aria-controls="navbartoggle" aria-expanded="false" aria-label="Toggle navigation">
           <i style="transform: rotate(90deg);" class="material-icons">compare_arrows</i>
@@ -113,7 +113,7 @@
                  <li class="dropdown messages-menu" id="envelope_messages">
                      <!-- /.dropdown-messages -->
                  </li>
-                 
+
                  <li class="dropdown notifications-menu" id="envelope_notifications">
                      <!-- /.dropdown-messages -->
                  </li>
@@ -176,11 +176,11 @@
         </div>
         <div id="adianti_online_content"></div>
         <div id="adianti_online_content2"></div>
-        
+
         <div id="adianti_right_panel" class="right-panel"></div>
         <div id="adianti_bottom_panel" class="bottom-panel"></div>
     </section>
-    
+
       <div id="adianti_debug_panel" class="debug-panel">
           <i onclick="Adianti.hideDebugPanel()" class="fa fa-times" aria-hidden="true" title="_t{Close}"></i>
           <span > Request URL </span>
@@ -188,13 +188,13 @@
           <div id="request_url_panel"> </div>
           <div id="request_data_panel"> </div>
       </div>
-      
+
     <!-- Select Plugin Js -->
     <script src="app/templates/{template}/plugins/jquery-slimscroll/jquery.slimscroll.js"></script>
     <script src="app/templates/{template}/plugins/node-waves/waves.js"></script>
     <script src="app/templates/{template}/js/admin.js"></script>
     <script src="app/templates/{template}/js/custom.js"></script>
     <script src="app/templates/{template}/js/sweetalert.min.js"></script>
-    
+
 </body>
 </html>
